# Ros_Qt5_Gui_App

./: BUILD_INFO.txt  CMakeLists.txt  PLAN_IOS_APP.md  README.md  build.bat  run.bat  update_and_run.bat
.github/workflows/: ios_build.yaml  ros_noetic_build.yaml  windows_build.yaml  windows_publish_binary_branch.yaml
doc/: usage.md  usage_en.md
ios/EggyCar/: AppState.swift  ConnectionSheet.swift  ControlView.swift  EggyCarApp.swift  Info.plist  JoystickView.swift  MainTabView.swift  MapCanvasView.swift  MapView.swift  Models.swift  MonitorView.swift  ROSBridgeClient.swift  ROSBridgeProtocol.swift  SettingsView.swift  StatusBarView.swift  TopicManager.swift
ios/EggyCar.xcodeproj/: project.pbxproj
ios/EggyCar/Assets.xcassets/AppIcon.appiconset/: Contents.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/app/display/: display_occ_map.cpp  display_occ_map.h  robot_shape.cpp  robot_shape.h  virtual_display.cpp
src/app/display/manager/: display_manager.cpp  scene_manager.cpp  view_manager.cpp  view_manager.h
src/app/resource/: images.qrc
src/app/ui/: mainwindow.ui
src/app/widgets/: command_center_widget.cpp  command_center_widget.h  dashboard.cpp  diagnostic_dock_widget.cpp  diagnostic_dock_widget.h  display_config_widget.cpp  display_config_widget.h  nav_goal_table_view.cpp  nav_goal_widget.cpp  ratio_layouted_frame.cpp  ratio_layouted_frame.h  set_pose_widget.cpp  speed_ctrl.h  status_chip.h  topology_route_widget.cpp  ui_style.cpp  ui_style.h  ui_theme.h
src/basic/map/: occupancy_map.h
src/basic/msg/: msg_info.h
src/channel/: channel_manager.cc
src/channel/ros1/: rosnode.cpp  rosnode.h
src/channel/ros2/: rclcomm.cpp  rclcomm.h
src/channel/rosbridge/: rosbridge_comm.cpp  rosbridge_comm.h
src/channel/rosbridge/include/: ros_topic.h
src/common/: CMakeLists.txt
src/common/config/: config_define.h
